Cambios de titulos de las presentaciones.

--- a/Nivel1-A/Documentos/Videos/clase1.tex
+++ b/Nivel1-A/Documentos/Videos/clase1.tex
@@ -1,4 +1,4 @@
-\section{Introducción a la teledetección}
+\section{Adquisición de imágenes}
 
 %--- Next Frame ---%
 \subsection{Definición}
@@ -77,11 +77,21 @@
 \begin{frame}{}
   \begin{figure}
     \centering
-    \movie[width = 0.4\textwidth,loop,autostart]{\centering\includegraphics[width=0.4\textwidth]{fig:polar.png}}{./figs/fig:polar.mp4}
+    \includegraphics[width=0.8\textwidth]{fig:polar.png}
     \caption{Orbitas polares.}
     \label{}
   \end{figure}
 \end{frame}
+
+\begin{frame}{}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{fig:geo.png}
+    \caption{Orbitas geoestacionarias.}
+    \label{}
+  \end{figure}
+\end{frame}
+
 %--- Next Frame ---%
 \begin{frame}{}
 \only<1>{Resolución espacial.}
