--- a/Nivel1-A/Documentos/Videos/clase3.tex
+++ b/Nivel1-A/Documentos/Videos/clase3.tex
@@ -1,13 +1,13 @@
-\section{Formación de imágenes satelitales}
+\section{Formación de imágenes}
 \subsection{Partes de una imagen}
 %--- Next Frame ---%
 
 \begin{frame}{}
 \begin{block}{Píxel}
-  Un píxel es el mínimo elemento de una imagen. 
+  Un píxel es el mínimo elemento de una imagen.
 \end{block}\pause
 \begin{block}{Banda}
-  Una imagen digital es un agrupamiento de píxeles en dos dimensiones. 
+  Una imagen digital es un agrupamiento de píxeles en dos dimensiones.
 \end{block}
 \end{frame}
 
