--- a/Nivel1-A/Documentos/Videos/presentacion.tex
+++ b/Nivel1-A/Documentos/Videos/presentacion.tex
@@ -6,11 +6,11 @@
 \input{preamble.tex}
 \usepackage{multimedia}
 \usepackage{subfig}
-%\includeonly{clase1}
+\includeonly{clase1}
 \title{\\[2cm]Introducción a la teledetección}
 
 \author{Francisco Nemiña y Diego Schell$^{*}$}
-\email{dschell@conae.gov.ar}
+\email{}
 \place{Buenos Aires, Argentina}
 \logoext{./logos/logo-ext.png}
 
