--- a/Nivel1-A/Documentos/Videos/clase3.tex
+++ b/Nivel1-A/Documentos/Videos/clase3.tex
@@ -130,7 +130,7 @@
 
 \begin{frame}{}
     \begin{block}{Resolución espectral}
-        Es el número de y tamaño de intervalos de un rango de lon
+        Es el número y tamaño de intervalos de un rango espectral.
     \end{block}
 \end{frame}
 %--- Next Frame ---%
@@ -145,22 +145,9 @@
 \end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{}
-  \begin{figure}
-    \centering
-    \includegraphics[width=0.8\textwidth]{fig:eshi.png}
-    \caption{Resolución espectral sobre la firma espectral.}
-    \label{}
-  \end{figure}
-\end{frame}
 %--- Next Frame ---%
 
-\begin{frame}{}
-    \begin{block}{Definición}
-        Es la capacidad del sensor de distinguir regiones del espectro electromagnético.
-    \end{block}
-\end{frame}
-%--- Next Frame ---%
+
 
 %\subsection{Proyección sobre el terreno}
 
