Correcciones a la guia 1.

--- a/Nivel1-A/Documentos/Guia/guia1.tex
+++ b/Nivel1-A/Documentos/Guia/guia1.tex
@@ -4,13 +4,6 @@ Esta clase tiene como objetivo familiarizarze con el entorno gráfico del \emph{
 
 Durante el curso se trabajará con imágenes de la región de triple frontera, que incluye el límite entre la provincia de Misiones en Argentina, Brasil y Paraguay. En esta zona (Figura \ref{fig:mapa}) se encuentra el Parque Nacional Iguazú (Argentina), el Parque Nacional Iguaçu (Brasil), el Aeropuerto Internacional Cataratas del Iguazú, los ríos Iguazú (frontera entre Argentina y Brasil) y Paraná (frontera entre Paraguay y Argentina), las ciudades de Foz de Iguaçu (Brasil), Ciudad del Este (Paraguay) y Puerto Iguazú (Argentina) y el embalse Ugugua-Í.
 
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=0.7\textwidth]{fig:mapa.jpg}
-    \caption{Mapa de la zona de triple frontera.}
-    \label{fig:mapa}
-\end{figure}
-
 \section{Sobre esta guía}
 
 A lo largo de la guía se utilizará como referencia la siguiente simbología:
@@ -24,6 +17,16 @@ A lo largo de la guía se utilizará como referencia la siguiente simbología:
 \end{itemize}
 
 Las rutas estarán siempre definidas a partir de la carpeta \directory{material}.
+
+\begin{landscape}
+  \begin{figure}[h!]
+      \centering
+      \includegraphics[width=1\columnwidth]{fig:mapa.jpg}
+      \caption{Mapa de la zona de triple frontera.}
+      \label{fig:mapa}
+  \end{figure}
+\end{landscape}
+
 
 \section{Interfaz gráfica del SNAP}
 
@@ -85,7 +88,11 @@ Localice dentro de la imagen el Aeropuerto Cataratas del Iguazú.
 
 \section{Mediciones}
 
-Para medir una distancia entre puntos se utiliza la herramienta \menu{Determines the distance between two points} (Figura \ref{fig:distancia} a) que se encuentra en la barra de herramientas.
+Para medir una distancia entre puntos se utiliza la herramienta
+\begin{center}
+  \menu{Determines the distance between two points}
+\end{center}
+  (Figura \ref{fig:distancia} a) que se encuentra en la barra de herramientas.
 
 \begin{figure}[h!]
     \centering
@@ -96,7 +103,7 @@ Para medir una distancia entre puntos se utiliza la herramienta \menu{Determines
     \label{fig:distancia}
 \end{figure}
 
-Una vez seleccionado el icono, haga click derecho para trazar una linea entre los puntos a medir y finalice con doble click. El resultado y su incerteza (en Km), apareceran en una ventana emergente (Figura \ref{fig: distancia} b)Para utilizarla haga click sobre la herramienta y luego en un punto de la imagen para comenzar a medir.
+Una vez seleccionado el icono, haga click derecho para trazar una linea entre los puntos a medir y finalice con doble click. El resultado y su incerteza (en Km), apareceran en una ventana emergente (Figura \ref{fig:distancia} b)Para utilizarla haga click sobre la herramienta y luego en un punto de la imagen para comenzar a medir.
 
 Mida la longitud de la pista de aterrizaje del Aeropuerto Cataratas del Iguazú.
 
@@ -126,14 +133,16 @@ y
 
 Ambas imágenes, junto con la anterior, corresponden a la misma zona y época del año.
 
-Para ver las tres en simultáneo haga click en \menu{Window>Tile Horizontally}. Puede sincronizarlas con el botón \menu{Synchronises view across multiple image windows} (Figura \ref{fig:multiples}) y, al moverse o hacer zoom sobre una imagen, la acción se reproducirá en el resto, mostrándose las imágenes vinculadas. Para volver al modo habitual haga click en \menu{Window>Tile Single}. 
-
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.6\textwidth]{fig:multiples.png}
     \caption{Múltiples visualizadores. Se destaca el botón \\ \menu{Synchronises view across multiple image windows}}
     \label{fig:multiples}
 \end{figure}
+
+Para ver las tres en simultáneo haga click en \menu{Window>Tile Horizontally}. Puede sincronizarlas con el botón \menu{Synchronises view across multiple image windows} (Figura \ref{fig:multiples}) y, al moverse o hacer zoom sobre una imagen, la acción se reproducirá en el resto, mostrándose las imágenes vinculadas. Para volver al modo habitual haga click en \menu{Window>Tile Single}.
+
+
 
 \section{Actividad práctica}
 
