--- a/Nivel1-A/Documentos/Guia/preamble.tex
+++ b/Nivel1-A/Documentos/Guia/preamble.tex
@@ -29,6 +29,8 @@
 \usepackage[affil-it]{authblk}
 % Compatibilidad con PDF/A
 \usepackage{xmpincl}
+% Landscape pagestyle
+\usepackage{pdflscape}
 % Hoja a4 mas ancha
 \usepackage{a4wide}
 % Citas
