se agrego el mapa modificado

--- a/Nivel1-A/Documentos/Videos/clase4.tex
+++ b/Nivel1-A/Documentos/Videos/clase4.tex
@@ -10,6 +10,17 @@
   \end{figure}
 \end{frame}
 %--- Next Frame ---%
+\subsection{Índices espectrales}
+
+\begin{frame}{}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{fig:firmasalto.png}
+    \caption{Salto $\rho_{nir}$ - $\rho_{red}$}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
 
 \begin{frame}{}
   \begin{figure}
@@ -21,16 +32,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\subsection{Índices espectrales}
 
-\begin{frame}{}
-  \begin{figure}
-    \centering
-    \includegraphics[width=0.8\textwidth]{fig:firmasalto.png}
-    \caption{Salto $\rho_{nir}$ - $\rho_{red}$}
-    \label{}
-  \end{figure}
-\end{frame}
 
 %--- Next Frame ---%
 
