agregado de diapositivas clase 4

--- a/Nivel1-A/Documentos/Videos/clase4.tex
+++ b/Nivel1-A/Documentos/Videos/clase4.tex
@@ -22,6 +22,7 @@
 \end{frame}
 %--- Next Frame ---%
 
+
 \begin{frame}{}
   \begin{figure}
     \centering
@@ -30,9 +31,35 @@
     \label{}
   \end{figure}
 \end{frame}
+
+
 %--- Next Frame ---%
 
+\begin{frame}{}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{fig:firmavarsr1.png}
+    \caption{Variación de la firma espectral según porcentaje de cobertura de vegetación.}
+    \label{}
+  \end{figure}
+\end{frame}
 
+%--- Next Frame ---%
+\begin{frame}
+\begin{equation}
+    SR = \frac{\rho_{nir}}{\rho_{nir}}
+  \end{equation}
+  \end{frame}
+%--- Next Frame ---%
+  
+\begin{frame}{}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{fig:firmavarsr2.png}
+    \caption{Variación de la firma espectral según porcentaje de cobertura de vegetación.}
+    \label{}
+  \end{figure}
+\end{frame}
 
 %--- Next Frame ---%
 
