Actualizacion de la presentacion de la clase 2.

--- a/Nivel1-A/Documentos/Videos/clase2.tex
+++ b/Nivel1-A/Documentos/Videos/clase2.tex
@@ -34,7 +34,6 @@
 
 
 \begin{frame}
-  \frametitle{Conociendo el espectro}
   \begin{exampleblock}{Ejemplo:}
     \begin{itemize}
       \item<1,4> Visible
@@ -79,12 +78,6 @@
 %--- Next Frame ---%
 
 \begin{frame}{}
-\si{\watt\per\square\meter\per\steradian}
-\end{frame}
-
-%--- Next Frame ---%
-
-\begin{frame}{}
  Interacciones entre radiación electromagnética y la superficie terrestre.
 \end{frame}
 
@@ -94,7 +87,7 @@
 \begin{frame}{}
   \begin{figure}
     \centering
-    \movie[width = 0.8\textwidth,loop,autostart]{\centering\includegraphics[width=0.2\textwidth]{fig:transmision.png}}{./figs/fig:transmision.mp4}
+    \includegraphics[width=0.7\textwidth]{fig:transmision.png}
     \caption{Interacción entre materia y radiación: transmitancia.}
     \label{}
   \end{figure}
@@ -106,7 +99,7 @@
 \begin{frame}{}
   \begin{figure}
     \centering
-    \movie[width = 0.8\textwidth,loop,autostart]{\centering\includegraphics[width=0.3\textwidth]{fig:absorcion.png}}{./figs/fig:absorcion.mp4}
+    \includegraphics[width=0.7\textwidth]{fig:absorcion.png}
     \caption{Interacción entre materia y radiación: absorvancia.}
     \label{}
   \end{figure}
@@ -117,7 +110,7 @@
 \begin{frame}{}
   \begin{figure}
     \centering
-    \movie[width = 0.8\textwidth,loop,autostart]{\centering\includegraphics[width=0.4\textwidth]{fig:refleccion.png}}{./figs/fig:refleccion.mp4}
+    \includegraphics[width=0.7\textwidth]{fig:refleccion.png}
     \caption{Interacción entre materia y radiación: reflectancia.}
     \label{}
   \end{figure}
@@ -336,8 +329,8 @@
 \begin{frame}{}
   \begin{figure}
     \centering
-    \includegraphics[width=0.45\textwidth]{fig:rgb.jpg}
-    \caption{Teoría adivita del color.}
+    \includegraphics[width=0.8\textwidth]{fig:rgb.png}
+    \caption{Teoría aditiva del color.}
     \label{}
   \end{figure}
 \end{frame}
