--- a/Nivel1-A/Documentos/Videos/clase3.tex
+++ b/Nivel1-A/Documentos/Videos/clase3.tex
@@ -11,6 +11,16 @@
 \end{block}
 \end{frame}
 
+\begin{frame}{}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.7\textwidth]{fig:bandas.png}
+    \caption{Bandas de una imagen y su correspondencia con zonas del espectro.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
 %--- Next Frame ---%
 \begin{frame}{}
   \begin{figure}
@@ -140,6 +150,36 @@
     \centering
     \includegraphics[width=0.8\textwidth]{fig:eslo.png}
     \caption{Resolución espectral sobre la firma espectral.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{fig:esmid.png}
+    \caption{Resolución espectral sobre la firma espectral.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{fig:eshig.png}
+    \caption{Resolución espectral sobre la firma espectral.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{fig:panmulti.png}
+    \caption{Imágenes pancromáticas, multiespectrales e hiperespectrales.}
     \label{}
   \end{figure}
 \end{frame}
