--- a/Nivel1-A/Documentos/Guia/guia6.tex
+++ b/Nivel1-A/Documentos/Guia/guia6.tex
@@ -2,12 +2,12 @@
 
 \section{Deforestación en el noroeste argentino}
 
-El objetivo de esta aplicación es estimar la superficie cubierta por vegetación y su variación en los alrededores de la ciudad de Joaquin V. Gonzalez, Salta, Argentina, entre los meses de enero de 1986 y diciembre de 2017.
+El objetivo de esta aplicación es analizar la variación de la superficie cubierta por vegetación en los alrededores de la ciudad de Joaquin V. Gonzalez, Salta, Argentina, entre 1986 y 2017.
 
-Para hacerlo, siga los siguientes pasos:
+Realice los siguientes pasos:
 
 \begin{enumerate}
-\item Descargue las imágenes de las inmediaciones de la ciudad de Joaquin V. Gonzales del 7 de enero de 1986 y 30 de diciembre de 2018, correspondientes a los satélites LANDSAT 5 y LANDSAT 8.
+\item Descargue las imágenes de las inmediaciones de la ciudad de Joaquin V. Gonzales del 7 de enero de 1986 y 30 de diciembre de 2017, correspondientes a los satélites LANDSAT 5 y LANDSAT 8.
 
 \item Apile y recorte cada una de las imágenes según las coordenadas
 
