Homogeneización de la guía 4.

--- a/Nivel1-A/Documentos/Guia/guia.tex
+++ b/Nivel1-A/Documentos/Guia/guia.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper,12pt]{report}
 \input{preamble.tex}
 \usepackage{float}
-\includeonly{guia1,guia2, guia3,guia4,guia5,guia6,apendice1,apendice2}
+\includeonly{guia4}
 \graphicspath{{./figs/}}
 % Renombro lo capitulos
 \addto\captionsspanish{\renewcommand{\chaptername}{Clase}}
