Corrección a la guia 2.

--- a/Nivel1-A/Documentos/Guia/guia2.tex
+++ b/Nivel1-A/Documentos/Guia/guia2.tex
@@ -1,6 +1,6 @@
 \chapter{Principios físicos}
 
-El objetivo de esta clase es familiarizarze con los conceptos de combinación de banda y firma espectral.  
+El objetivo de esta clase es familiarizarze con los conceptos de combinación de banda y firma espectral.
 
 
 
@@ -22,7 +22,7 @@ Utilice el mapa con puntos de interés (Figura \ref{fig:mapa} Guía Clase 1) par
 \subsection{Combinación infrarrojo color}
 \label{sec:infrarrojocolor}
 
-Seleccione \menu{Open RGB image windows}, elija las bandas \emph{infrarrojo cercano (B8)}, \emph{verde(B4)} y \emph{azul(B3)} de \emph{Sentinel-2}. Despliegue haciendo click en \menu{OK}. 
+Seleccione \menu{Open RGB image windows}, elija las bandas \emph{infrarrojo cercano (B8)}, \emph{verde(B4)} y \emph{azul(B3)} de \emph{Sentinel-2}. Despliegue haciendo click en \menu{OK}.
 
 En esta combinación la vegetación leñosa como el bosque, varía en tonos rojizos y, la vegetación herbacea como los pastizales y cultivos, se visualizan en magenta. Los suelos se muestran en diversos tonos de verde y las áreas urbanas aparecen en cian tendiendo al azul cuando se encuentran densamente pobladas.
 Esta combinación de bandas es útil para el estudio de la vegetación ya que resalta la relación entre la longitud de onda del rojo y del infrarrojo cercano.
@@ -34,7 +34,7 @@ Utilice el mapa con puntos de interés (Figura \ref{fig:mapa} Guía 1) e identif
 
 Seleccione \menu{Open RGB image windows} haciendo click derecho sobre el nombre de la imagen. Elija las bandas \emph{infrarrojo cercano (B8)}, \emph{infrarrojo onda corta(B11)} y \emph{azul(B2)} de \emph{Sentinel-2}. Despliegue haciendo click en \menu{OK}.
 
-La vegetación saludable aparece en tonos de rojos, marrones, naranjas y amarillos. Los suelos pueden observarse en variedades de verde y marrón. Los suelos sin cobertura vegetal estarán en azul intenso, mientras que aquellos con vegetación en crecimiento se mostrarán rosados. El agua clara y profunda se percibe oscura mientras que, si es profunda o contiene sedimentos, aparecerá con tonos de azul más claro.
+La vegetación saludable aparece en tonos de rojos, marrones, naranjas y amarillos. Los suelos pueden observarse en variedades de verde y marrón. Los suelos sin cobertura vegetal estarán en azul intenso, mientras que aquellos con vegetación en crecimiento se mostrarán rosados. El agua clara y profunda se percibe oscura mientras que, si es poco profunda o contiene sedimentos, aparecerá con tonos de azul más claro.
 La adición de la banda del infrarrojo de onda corta aumenta la sensibilidad para identificar estrés hídrico y variaciones del contenido de humedad en la vegetación y suelos.
 
 Utilice el mapa con puntos de interés para identificar diferentes tipos de vegetación (Figura \ref{fig:mapa}, Guía Clase 1). Explore la imagen utilizando las herramientas de navegación y zoom. Compare color, tono y textura.
@@ -85,9 +85,9 @@ Realice y compare las firmas espectrlales de bosque implantado, cultivo, suelo s
   \item Despliegue las tres combinaciones de la imagen utilizando múltiples visualizadores e identifique la intersección entre el río Paraná y el río Iguazú.
   \begin{enumerate}
   \item Compare el color y tono de ambos ríos. En base a la interpretación visual ¿Qué combinación de bandas considera la más adecuada para identificar la presencia de sedimentos? ¿Qué río tiene mayor concentración de sedimentos?.
-  
+
   \item  Identifique la ciudad de Puerto Iguazú y analice el área urbana. ¿En qué combinación se puede ver con mayor nitidez la red víal?.
-  
+
   \item  Identifique el embalse Urugua-í y compare la presencia de sedimentos con los ríos Paraná e Iguazú. ¿Cuál de ellos presenta menor concentración?.
 \end{enumerate}
 
@@ -98,7 +98,7 @@ Realice y compare las firmas espectrlales de bosque implantado, cultivo, suelo s
     \item  Compare el color y tono para la combinación "vegetación sana".
     \item  ¿En qué combinación encuentra mayor heterogeneidad? ¿Cuál considera que es la más útil para separar diferentes tipos de vegetación?
   \end{enumerate}
-      
+
   \item Compare un cultivo con cobertura vegetal y un lote de suelo sin cobertura  ¿Qué combinación considera más útil para medir heterogeneidad de un suelo sin cobertura vegetal? ¿y para suelos con vegetación?
 
 
@@ -113,7 +113,7 @@ Realice y compare las firmas espectrlales de bosque implantado, cultivo, suelo s
     \item Analice las cuatro firmas espectrales teniendo en cuenta los picos y valles de reflectancia de acuerdo a la longitud de onda. ¿En qué longitudes de onda presenta mayor reflectancia la vegetación? ¿En cuáles presenta menor reflectancia? Explique teniendo en cuenta los parámetros fisiológicos que modelan este comportamiento.
     \item Compare una firma de vegetación fotosintéticamente activa (e.g. selva paranaense), con otra de suelo sin cobertura vegetal. ¿Pueden diferenciarse en el visible? ¿Y en el infrarrojo cercano? Analice donde se observan mayores diferencias.
   \end{enumerate}
-	\item Identifique un área urbana, grafique su firma espectral y compare con el resto de las coberturas. ¿Qué diferencias observa con el suelo sin cobertura vegetal? 
+	\item Identifique un área urbana, grafique su firma espectral y compare con el resto de las coberturas. ¿Qué diferencias observa con el suelo sin cobertura vegetal?
   \end{enumerate}
 
 Estas preguntas y actividades no serán evaluadas. Su objetivo es discutirlas en el foro de consultas e intercambio de la clase.
