--- a/Nivel1-A/Documentos/Videos/clase4.tex
+++ b/Nivel1-A/Documentos/Videos/clase4.tex
@@ -47,7 +47,7 @@
 %--- Next Frame ---%
 \begin{frame}
 \begin{equation}
-    SR = \frac{\rho_{nir}}{\rho_{nir}}
+    SR = \frac{\rho_{nir}}{\rho_{nir}} = 12.6
   \end{equation}
   \end{frame}
 %--- Next Frame ---%
@@ -62,6 +62,12 @@
 \end{frame}
 
 %--- Next Frame ---%
+\begin{frame}
+\begin{equation}
+    SR = \frac{\rho_{nir}}{\rho_{nir}} = 2.1
+  \end{equation}
+  \end{frame}
+%--- Next Frame ---%
 
 \begin{frame}{}
 \begin{block}{Normalized Difference Vegetation Index - NDVI}
@@ -71,6 +77,20 @@
   \end{equation}
   con $\rho_{nir}$, $\rho_{red}$ las reflectancias en el infrarrojo cercano y el rojo, respectivamente.
 \end{block}
+\end{frame}
+
+%--- Next Frame ---%
+
+\begin{frame}{}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.7\textwidth]{fig:biomasa.png}
+    \caption{Relación entre biomasa y NDVI.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+\begin{frame}
 \begin{block}{Observación}
     \begin{itemize}[<+->]
         \item La reflectancia del suelo lo puede afectar.
@@ -78,16 +98,7 @@
     \end{itemize}
 \end{block}
 \end{frame}
-%--- Next Frame ---%
 
-\begin{frame}{}
-  \begin{figure}
-    \centering
-    \includegraphics[width=0.7\textwidth]{fig:biomasa.png}
-    \caption{Relación entre la biomasa y el NDVI.}
-    \label{}
-  \end{figure}
-\end{frame}
 %--- Next Frame ---%
 
 \begin{frame}{}
