actualizacion video clase 5

--- a/Nivel1-A/Documentos/Videos/clase5.tex
+++ b/Nivel1-A/Documentos/Videos/clase5.tex
@@ -28,6 +28,13 @@
 %--- Next Frame ---%
 
 \begin{frame}{}
+\begin{block}{¿Cómo clasificamos?}
+ Importancia del espacio multiespectral.
+\end{block}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{}
   \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{fig:bidimensional.jpg}
