agregado diapositivas clase 5

--- a/Nivel1-A/Documentos/Videos/clase5.tex
+++ b/Nivel1-A/Documentos/Videos/clase5.tex
@@ -183,6 +183,14 @@
     \label{}
   \end{figure}
 \end{frame}
+
+%--- Next Frame ---%
+\begin{frame}{}
+\begin{block}{Métodos de clasificación}
+  Supervisados
+\end{block}
+
+\end{frame}
 %--- Next Frame ---%
 \subsection{Métodos supervisados}
 \begin{frame}{}
@@ -208,7 +216,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.6\textwidth]{fig:areasentrenamiento.jpg}
-    \caption{Clasificación por k-means.}
+    \caption{Áreas de entrenamiento.}
     \label{}
   \end{figure}
 \end{frame}
@@ -216,15 +224,53 @@
 %--- Next Frame ---%
 
 \begin{frame}{}
-\begin{block}{Métodos de clasificación}
-  Supervisados\pause
- 
-  No supervisados
+\begin{block}{Esquema de clasificación}
+  Marco teórico
+\end{block}
+
+\end{frame}
+%--- Next Frame ---%
+\begin{frame}{}
+\begin{block}{Esquema de clasificación}
+  Distancia Mínima\pause
+
+  Máxima Verosimilitud \pause
+  
+  Mahalanobis 
+\end{block}
+
+\end{frame}
+%--- Next Frame ---%
+\begin{frame}{}
+\begin{block}{Esquema de clasificación}
+  Marco teórico
+\end{block}
+
+\end{frame}
+%--- Next Frame ---%
+\begin{frame}{}
+\begin{block}{Esquema de clasificación}
+  Marco de trabajo sistemático\pause
+
+  Clases definidas a priori \pause
+  
+  Criterios utilizados y relación entre clases 
 \end{block}
 
 \end{frame}
 %--- Next Frame ---%
 
+\begin{frame}{}
+\begin{block}{Esquema de clasificación}
+ Sistemático\pause
+
+  Clases únicas y mutuamente excluyentes\pause
+  
+  Mismo nivel jerárquico 
+\end{block}
+
+\end{frame}
+%--- Next Frame ---%
 
 \begin{frame}{}
   \begin{table}[hbt]
